radix-transactions/tests/assets/manifest_generator_error_invalid_bytes_hex_1.rtm
CALL_METHOD
    Address("component_sim1cptxxxxxxxxxfaucetxxxxxxxxx000527798379xxxxxxxxxhkrefh")
    "lock_fee"
;
CALL_FUNCTION
    Address("package_sim1p4r4955skdjq9swg8s5jguvcjvyj7tsxct87a9z6sw76cdfd2jg3zk")
    "Hello"
    "instantiate_hello"
    Bytes("invalid_hex")
;
